[package]
name = "Boombots"
version = "0.1.0"
authors = ["Erik <erik.svedang@gmail.com>"]

[[bin]]
name = "Boombots"
path = "src/main.rs"

[dependencies]
piston = "0.1.4"
rand = "0.3"

[dependencies.pistoncore-sdl2_window]
version = "0.1.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.1.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.1.0"
optional = true

[dependencies]
piston2d-opengl_graphics = "0.1.0"
piston2d-graphics = "0.1.4"

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]

